# SDIZOproject

./: CMakeLists.txt  Menu.cpp  Menu.h  README.md  Timer.cpp  Timer.h  main.cpp
DoubleLinkedList/: DoubleLinkedList.cpp  DoubleLinkedList.h  Node.cpp  Node.h  doublelinkedlist2500.txt  doublelinkedlist7500.txt
Heap/: Heap.cpp  Heap.h  heap100000.txt  heap15000.txt  heap200000.txt  heap22500.txt  heap2500.txt  heap50000.txt  heap500000.txt  heap7500.txt
Table/: Table.cpp  Table.h  table100000.txt  table15000.txt  table200000.txt  table22500.txt  table2500.txt  table50000.txt  table500000.txt  table7500.txt
Tests/: Timer.cpp  Timer.h
